--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,5 +38,8 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
